--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ body {
 h2 {
     font-size: 24px;
     text-transform: uppercase;
-    color: #303030;
+    color: #f4511e;
     font-weight: 600;
     margin-bottom: 30px;
 }
